--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,7 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'xD', 'uwu'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "key_inv = set()\n",
+    "\n",
+    "key_inv.add('xD')\n",
+    "key_inv.add('uwu')\n",
+    "\n",
+    "print(key_inv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +38,13 @@
     "    print(\"Living Room\")\n",
     "\n",
     "\n",
-    "def gameroom_items():\n",
-    "    print()\n",
+    "gameroom_items = ['Sofa', 'Piano']\n",
     "\n",
-    "def bedroom1_items():\n",
-    "    print()\n",
+    "bedroom1_items = ['Queen bed']\n",
     "\n",
-    "def bedroom2_items():\n",
-    "    print()\n",
+    "bedroom2_items = ['Double bed', 'Dresser']\n",
     "\n",
-    "def livingroom_items():\n",
-    "    print()\n",
-    "\n",
+    "livingroom_items = ['Dining table', 'Silla norte', 'Silla sur', 'Silla este', 'Silla oeste']\n",
     "\n",
     "def moverse(actual_room):\n",
     "    hab_list()\n",
@@ -37,7 +54,7 @@
     "    if hab == 'Game Room':\n",
     "        actual_room = room[0]\n",
     "        return actual_room\n",
-    "    elif hab == 'Bedroom 1':\n",
+    "    elif hab == 'Bedroom 1' and 'Llave A' in key_inv:\n",
     "        actual_room = room[1]\n",
     "        return actual_room\n",
     "    elif hab == 'Bedroom 2':\n",
@@ -46,35 +63,49 @@
     "    elif hab == 'Living Room':\n",
     "        actual_room = room[3]\n",
     "        return actual_room\n",
+    "    else: \n",
+    "        print(\"No puedes acceder a esa habitación\")\n",
     "\n",
     "\n",
     "\n",
-    "def examinar(actual_room):\n",
-    "\n",
-    "    #exam_input = input(\"¿Que quieres examinar?\")\n",
+    "def examinar(actual_room, key_inv):\n",
     "\n",
     "    if actual_room == 'Game Room':\n",
-    "        gameroom_items()\n",
+    "\n",
+    "        print(gameroom_items)\n",
+    "\n",
+    "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "        \n",
+    "        while exam_input not in gameroom_items:\n",
+    "            exam_input = input(\"Elija uno de los objetos disponibles.\")\n",
+    "        \n",
+    "        if exam_input == 'Sofa':\n",
+    "            print(\"Tras examinar detenidamente el sofá encuentras... que no tiene nada de especial.\")\n",
+    "\n",
+    "        if exam_input == 'Piano':\n",
+    "            print(\"Tras examinar el piano encuentras una tecla que destaca sobre las demás\")\n",
+    "            levantar = input(\"¿Levantas la tecla? (Si/No)\")\n",
+    "            if levantar == 'Si':\n",
+    "                print(\"Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\")\n",
+    "                key_inv.add('Llave A')\n",
     "\n",
     "    elif actual_room == 'Bedroom 1':\n",
-    "        bedroom1_items()\n",
-    "\n",
+    "        print(bedroom1_items)\n",
+    "        \n",
     "\n",
     "    elif actual_room == 'Bedroom 2':\n",
-    "        bedroom2_items()\n",
+    "        print(bedroom2_items)\n",
     "\n",
     "\n",
     "    elif actual_room == 'Living Room':\n",
-    "        livingroom_items()\n",
-    "\n",
+    "        print(livingroom_items)\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "def juego():\n",
     "\n",
-    "    key_inv = ()\n",
+    "    key_inv = set()\n",
     "    actual_room = room[0]\n",
     "    ganaste = False\n",
     "    print(\"Empieza el juego.\")\n",
@@ -87,7 +118,8 @@
     "            actual_room = moverse(actual_room)\n",
     "\n",
     "        elif accion == \"examinar\":\n",
-    "            key_inv = examinar(actual_room)\n",
+    "            print(\"Al examinar encuentras:\")\n",
+    "            key_inv = examinar(actual_room, key_inv)\n",
     "\n",
     "\n",
     "            \n",
@@ -97,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -106,8 +138,13 @@
      "text": [
       "Empieza el juego.\n",
       "Estás en la Game Room\n",
-      "¿Que quieres examinar?\n",
-      "\n",
+      "Al examinar encuentras:\n",
+      "['Sofa', 'Piano']\n",
+      "Tras examinar detenidamente el sofá encuentras... que no tiene nada de especial.\n",
+      "Estás en la Game Room\n",
+      "Al examinar encuentras:\n",
+      "['Sofa', 'Piano']\n",
+      "Tras examinar detenidamente el sofá encuentras... que no tiene nada de especial.\n",
       "Estás en la Game Room\n",
       "Acción no válida. Intenta nuevamente.\n"
      ]
@@ -116,6 +153,13 @@
    "source": [
     "juego()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
