--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,24 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'xD', 'uwu'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "key_inv = set()\n",
+    "respuestaCorr = '\\.+@.\\d{8}'\n",
     "\n",
-    "key_inv.add('xD')\n",
-    "key_inv.add('uwu')\n",
+    "\"tu frase es \"\n",
     "\n",
-    "print(key_inv)"
+    "respuestaJug = input(\"sgewrgh\")\n"
    ]
   },
   {
@@ -46,7 +37,7 @@
     "\n",
     "livingroom_items = ['Dining table', 'Silla norte', 'Silla sur', 'Silla este', 'Silla oeste']\n",
     "\n",
-    "def moverse(actual_room):\n",
+    "def moverse(actual_room, key_inv):\n",
     "    hab_list()\n",
     "    hab = input(\"¿A que habitación quiere ir?\")\n",
     "    while hab not in room:\n",
@@ -73,7 +64,6 @@
     "    if actual_room == 'Game Room':\n",
     "\n",
     "        print(gameroom_items)\n",
-    "\n",
     "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "        \n",
     "        while exam_input not in gameroom_items:\n",
@@ -90,15 +80,22 @@
     "                key_inv.add('Llave A')\n",
     "\n",
     "    elif actual_room == 'Bedroom 1':\n",
+    "\n",
     "        print(bedroom1_items)\n",
+    "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
+    "\n",
+    "\n",
     "        \n",
     "\n",
     "    elif actual_room == 'Bedroom 2':\n",
-    "        print(bedroom2_items)\n",
     "\n",
+    "        print(bedroom2_items)\n",
+    "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "\n",
     "    elif actual_room == 'Living Room':\n",
+    "        \n",
     "        print(livingroom_items)\n",
+    "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "\n",
     "\n",
     "\n",
@@ -111,25 +108,27 @@
     "    print(\"Empieza el juego.\")\n",
     "    accion='d'      # luego borra esto y el sal de abajo\n",
     "    while not ganaste and accion!='sal':\n",
+    "\n",
     "        print(f\"Estás en la {actual_room}\")\n",
     "        accion = input(\"¿Qué quieres hacer? (moverse/examinar): \").lower()\n",
     "        if accion == \"moverse\":\n",
     "            print(\"Moviendose...\")\n",
-    "            actual_room = moverse(actual_room)\n",
+    "            actual_room = moverse(actual_room, key_inv)\n",
     "\n",
     "        elif accion == \"examinar\":\n",
+    "\n",
     "            print(\"Al examinar encuentras:\")\n",
+    "            \n",
     "            key_inv = examinar(actual_room, key_inv)\n",
     "\n",
     "\n",
-    "            \n",
     "        else:\n",
     "            print(\"Acción no válida. Intenta nuevamente.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,10 +136,6 @@
      "output_type": "stream",
      "text": [
       "Empieza el juego.\n",
-      "Estás en la Game Room\n",
-      "Al examinar encuentras:\n",
-      "['Sofa', 'Piano']\n",
-      "Tras examinar detenidamente el sofá encuentras... que no tiene nada de especial.\n",
       "Estás en la Game Room\n",
       "Al examinar encuentras:\n",
       "['Sofa', 'Piano']\n",
