--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,20 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "respuestaCorr = '\\.+@.\\d{8}'\n",
-    "\n",
-    "\"tu frase es \"\n",
-    "\n",
-    "respuestaJug = input(\"sgewrgh\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +43,7 @@
     "        return actual_room\n",
     "    else: \n",
     "        print(\"No puedes acceder a esa habitación\")\n",
+    "        return actual_room\n",
     "\n",
     "\n",
     "\n",
@@ -128,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,9 +125,13 @@
      "text": [
       "Empieza el juego.\n",
       "Estás en la Game Room\n",
-      "Al examinar encuentras:\n",
-      "['Sofa', 'Piano']\n",
-      "Tras examinar detenidamente el sofá encuentras... que no tiene nada de especial.\n",
+      "Moviendose...\n",
+      "Lista de habitaciones: \n",
+      "Game Room\n",
+      "Bedroom 1\n",
+      "Bedroom 2\n",
+      "Living Room\n",
+      "No puedes acceder a esa habitación\n",
       "Estás en la Game Room\n",
       "Acción no válida. Intenta nuevamente.\n"
      ]
