--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +95,7 @@
     "    ganaste = False\n",
     "    print(\"Empieza el juego.\")\n",
     "    accion='d'      # luego borra esto y el sal de abajo\n",
+    "    \n",
     "    while not ganaste and accion!='sal':\n",
     "\n",
     "        print(f\"Estás en la {actual_room}\")\n",
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,30 @@
       "Living Room\n",
       "No puedes acceder a esa habitación\n",
       "Estás en la Game Room\n",
-      "Acción no válida. Intenta nuevamente.\n"
+      "Al examinar encuentras:\n",
+      "['Sofa', 'Piano']\n",
+      "Tras examinar el piano encuentras una tecla que destaca sobre las demás\n",
+      "Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\n",
+      "Estás en la Game Room\n",
+      "Moviendose...\n",
+      "Lista de habitaciones: \n",
+      "Game Room\n",
+      "Bedroom 1\n",
+      "Bedroom 2\n",
+      "Living Room\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "argument of type 'NoneType' is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mjuego\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[1], line 96\u001b[0m, in \u001b[0;36mjuego\u001b[1;34m()\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m accion \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmoverse\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     95\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMoviendose...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 96\u001b[0m     actual_room \u001b[38;5;241m=\u001b[39m \u001b[43mmoverse\u001b[49m\u001b[43m(\u001b[49m\u001b[43mactual_room\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey_inv\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m accion \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexaminar\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    100\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAl examinar encuentras:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[1], line 27\u001b[0m, in \u001b[0;36mmoverse\u001b[1;34m(actual_room, key_inv)\u001b[0m\n\u001b[0;32m     25\u001b[0m     actual_room \u001b[38;5;241m=\u001b[39m room[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m actual_room\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m hab \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBedroom 1\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mLlave A\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mkey_inv\u001b[49m:\n\u001b[0;32m     28\u001b[0m     actual_room \u001b[38;5;241m=\u001b[39m room[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m actual_room\n",
+      "\u001b[1;31mTypeError\u001b[0m: argument of type 'NoneType' is not iterable"
      ]
     }
    ],
