--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "room = ['Game Room', 'Bedroom 1', 'Bedroom 2', 'Living Room']\n",
+    "room = ['Game Room', 'Bedroom 1', 'Bedroom 2', 'Living Room', 'Outside']\n",
     "\n",
     "def hab_list():\n",
     "    print(\"Lista de habitaciones: \")\n",
-    "    print(\"Game Room\")\n",
-    "    print(\"Bedroom 1\")\n",
-    "    print(\"Bedroom 2\")\n",
-    "    print(\"Living Room\")\n",
+    "    for x in room:\n",
+    "        print(f\"- {x}\")\n",
     "\n",
     "\n",
     "gameroom_items = ['Sofa', 'Piano']\n",
@@ -26,20 +24,23 @@
     "\n",
     "def moverse(actual_room, key_inv):\n",
     "    hab_list()\n",
-    "    hab = input(\"¿A que habitación quiere ir?\")\n",
+    "    hab = input(\"¿A que habitación quiere ir?\").capitalize()\n",
     "    while hab not in room:\n",
     "        hab = input(\"Elija una habitación existente\")\n",
     "    if hab == 'Game Room':\n",
     "        actual_room = room[0]\n",
     "        return actual_room\n",
-    "    elif hab == 'Bedroom 1' and 'Llave A' in key_inv:\n",
+    "    elif hab == 'Bedroom 1' and 'Llave D' in key_inv:\n",
     "        actual_room = room[1]\n",
     "        return actual_room\n",
-    "    elif hab == 'Bedroom 2':\n",
+    "    elif hab == 'Bedroom 2' and 'Llave B' in key_inv:\n",
     "        actual_room = room[2]\n",
     "        return actual_room\n",
-    "    elif hab == 'Living Room':\n",
-    "        actual_room = room[3]\n",
+    "    elif hab == 'Living Room' and 'Llave C' in key_inv:\n",
+    "        actual_room = room[4]\n",
+    "        return actual_room\n",
+    "    elif hab == 'Outside' and 'Llave A' in key_inv:\n",
+    "        actual_room = room[4]\n",
     "        return actual_room\n",
     "    else: \n",
     "        print(\"No puedes acceder a esa habitación\")\n",
@@ -66,14 +67,12 @@
     "            if levantar == 'Si':\n",
     "                print(\"Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\")\n",
     "                key_inv.add('Llave A')\n",
+    "                return key_inv\n",
     "\n",
     "    elif actual_room == 'Bedroom 1':\n",
     "\n",
     "        print(bedroom1_items)\n",
     "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
-    "\n",
-    "\n",
-    "        \n",
     "\n",
     "    elif actual_room == 'Bedroom 2':\n",
     "\n",
@@ -87,16 +86,14 @@
     "\n",
     "\n",
     "\n",
-    "\n",
     "def juego():\n",
     "\n",
     "    key_inv = set()\n",
     "    actual_room = room[0]\n",
-    "    ganaste = False\n",
     "    print(\"Empieza el juego.\")\n",
     "    accion='d'      # luego borra esto y el sal de abajo\n",
     "    \n",
-    "    while not ganaste and accion!='sal':\n",
+    "    while not actual_room == room[4] and accion!='sal':\n",
     "\n",
     "        print(f\"Estás en la {actual_room}\")\n",
     "        accion = input(\"¿Qué quieres hacer? (moverse/examinar): \").lower()\n",
@@ -117,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -128,49 +125,20 @@
       "Estás en la Game Room\n",
       "Moviendose...\n",
       "Lista de habitaciones: \n",
-      "Game Room\n",
-      "Bedroom 1\n",
-      "Bedroom 2\n",
-      "Living Room\n",
+      "- Game Room\n",
+      "- Bedroom 1\n",
+      "- Bedroom 2\n",
+      "- Living Room\n",
+      "- Outside\n",
       "No puedes acceder a esa habitación\n",
       "Estás en la Game Room\n",
-      "Al examinar encuentras:\n",
-      "['Sofa', 'Piano']\n",
-      "Tras examinar el piano encuentras una tecla que destaca sobre las demás\n",
-      "Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\n",
-      "Estás en la Game Room\n",
-      "Moviendose...\n",
-      "Lista de habitaciones: \n",
-      "Game Room\n",
-      "Bedroom 1\n",
-      "Bedroom 2\n",
-      "Living Room\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "argument of type 'NoneType' is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mjuego\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[1], line 96\u001b[0m, in \u001b[0;36mjuego\u001b[1;34m()\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m accion \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmoverse\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     95\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMoviendose...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 96\u001b[0m     actual_room \u001b[38;5;241m=\u001b[39m \u001b[43mmoverse\u001b[49m\u001b[43m(\u001b[49m\u001b[43mactual_room\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey_inv\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m accion \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexaminar\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    100\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAl examinar encuentras:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[1], line 27\u001b[0m, in \u001b[0;36mmoverse\u001b[1;34m(actual_room, key_inv)\u001b[0m\n\u001b[0;32m     25\u001b[0m     actual_room \u001b[38;5;241m=\u001b[39m room[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m actual_room\n\u001b[1;32m---> 27\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m hab \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBedroom 1\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mLlave A\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mkey_inv\u001b[49m:\n\u001b[0;32m     28\u001b[0m     actual_room \u001b[38;5;241m=\u001b[39m room[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m actual_room\n",
-      "\u001b[1;31mTypeError\u001b[0m: argument of type 'NoneType' is not iterable"
+      "Acción no válida. Intenta nuevamente.\n"
      ]
     }
    ],
    "source": [
     "juego()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
