--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "room = ['Game Room', 'Bedroom 1', 'Bedroom 2', 'Living Room', 'Outside']\n",
+    "gameroom_items = ['Sofa', 'Piano']\n",
+    "bedroom1_items = ['Queen bed', 'Bedside table']\n",
+    "bedroom2_items = ['Double bed', 'Dresser']\n",
+    "livingroom_items = ['Dining table', 'Silla norte', 'Silla sur', 'Silla este', 'Silla oeste']\n",
     "\n",
     "def hab_list():\n",
     "    print(\"Lista de habitaciones: \")\n",
@@ -14,13 +18,14 @@
     "        print(f\"- {x}\")\n",
     "\n",
     "\n",
-    "gameroom_items = ['Sofa', 'Piano']\n",
+    "def puzle_cartas():\n",
+    "    carta = str(input(\"Al examinar más de cerca te das cuenta de que solo hay 10 cartas, una por cada valor. ¿Que carta quieres examinar?\"))\n",
+    "    mapa_cartas = { '1': 'Esternocleidomastoideo', 'As' : 'Esternocleidomastoideo', '2' : 'Impromtus','3' : 'Galimatías', '4': 'Anhelar','5': 'Zozobrar','6' : 'Ganzúa','7': 'Hiel','Sota' : 'Pedernal','Caballo' : 'Casquivano', 'Rey' : 'Caos'}\n",
     "\n",
-    "bedroom1_items = ['Queen bed']\n",
+    "    mensaje = mapa_cartas[carta]\n",
+    "    \n",
+    "    print(f\"En el dorso de la carta encuentras escrita la palabra '{mensaje}'\")\n",
     "\n",
-    "bedroom2_items = ['Double bed', 'Dresser']\n",
-    "\n",
-    "livingroom_items = ['Dining table', 'Silla norte', 'Silla sur', 'Silla este', 'Silla oeste']\n",
     "\n",
     "def moverse(actual_room, key_inv):\n",
     "    hab_list()\n",
@@ -30,20 +35,20 @@
     "    if hab == 'Game Room':\n",
     "        actual_room = room[0]\n",
     "        return actual_room\n",
-    "    elif hab == 'Bedroom 1' and 'Llave D' in key_inv:\n",
+    "    elif hab == 'Bedroom 1' and 'Llave A' in key_inv:\n",
     "        actual_room = room[1]\n",
     "        return actual_room\n",
     "    elif hab == 'Bedroom 2' and 'Llave B' in key_inv:\n",
     "        actual_room = room[2]\n",
     "        return actual_room\n",
     "    elif hab == 'Living Room' and 'Llave C' in key_inv:\n",
-    "        actual_room = room[4]\n",
+    "        actual_room = room[3]\n",
     "        return actual_room\n",
-    "    elif hab == 'Outside' and 'Llave A' in key_inv:\n",
+    "    elif hab == 'Outside' and 'Llave D' in key_inv:\n",
     "        actual_room = room[4]\n",
     "        return actual_room\n",
     "    else: \n",
-    "        print(\"No puedes acceder a esa habitación\")\n",
+    "        print(f\"No puedes acceder a la {hab}\")\n",
     "        return actual_room\n",
     "\n",
     "\n",
@@ -56,33 +61,61 @@
     "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "        \n",
     "        while exam_input not in gameroom_items:\n",
-    "            exam_input = input(\"Elija uno de los objetos disponibles.\")\n",
+    "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
     "        \n",
     "        if exam_input == 'Sofa':\n",
     "            print(\"Tras examinar detenidamente el sofá encuentras... que no tiene nada de especial.\")\n",
     "\n",
     "        if exam_input == 'Piano':\n",
     "            print(\"Tras examinar el piano encuentras una tecla que destaca sobre las demás\")\n",
-    "            levantar = input(\"¿Levantas la tecla? (Si/No)\")\n",
+    "            levantar = input(\"¿Levantas la tecla? (Si/No)\").capitalize()\n",
     "            if levantar == 'Si':\n",
     "                print(\"Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\")\n",
     "                key_inv.add('Llave A')\n",
-    "                return key_inv\n",
-    "\n",
+    "                \n",
+    "            \n",
     "    elif actual_room == 'Bedroom 1':\n",
     "\n",
     "        print(bedroom1_items)\n",
     "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "\n",
+    "        while exam_input not in bedroom1_items:\n",
+    "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
+    "\n",
+    "\n",
+    "        if exam_input == 'Bedside table':\n",
+    "\n",
+    "            examine_cards = input(\"Encuentras una baraja de cartas. ¿Examinar? (Si/No)\").capitalize()\n",
+    "            if examine_cards == 'Si':\n",
+    "                puzle_cartas()\n",
+    "\n",
+    "        elif exam_input == 'Queen Bed':\n",
+    "\n",
+    "            choice_bed = input('Encima del colchón ves una caja con un código. ¿Quieres introducir una palabra?').capitalize()\n",
+    "            if choice_bed == 'Si':\n",
+    "                queenbed_code = input('Introduce una palabra').capitalize()\n",
+    "                if queenbed_code == 'Caos':\n",
+    "                    key_inv.add('Llave B')\n",
+    "        else:\n",
+    "            print(\"hola\")\n",
+    "            \n",
+    "        \n",
     "    elif actual_room == 'Bedroom 2':\n",
     "\n",
     "        print(bedroom2_items)\n",
     "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "\n",
+    "        while exam_input not in bedroom2_items:\n",
+    "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
+    "\n",
     "    elif actual_room == 'Living Room':\n",
     "        \n",
     "        print(livingroom_items)\n",
     "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
+    "\n",
+    "        while exam_input not in livingroom_items:\n",
+    "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
+    "    return key_inv\n",
     "\n",
     "\n",
     "\n",
@@ -106,15 +139,13 @@
     "            print(\"Al examinar encuentras:\")\n",
     "            \n",
     "            key_inv = examinar(actual_room, key_inv)\n",
-    "\n",
-    "\n",
     "        else:\n",
     "            print(\"Acción no válida. Intenta nuevamente.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -123,6 +154,11 @@
      "text": [
       "Empieza el juego.\n",
       "Estás en la Game Room\n",
+      "Al examinar encuentras:\n",
+      "['Sofa', 'Piano']\n",
+      "Tras examinar el piano encuentras una tecla que destaca sobre las demás\n",
+      "Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\n",
+      "Estás en la Game Room\n",
       "Moviendose...\n",
       "Lista de habitaciones: \n",
       "- Game Room\n",
@@ -130,8 +166,22 @@
       "- Bedroom 2\n",
       "- Living Room\n",
       "- Outside\n",
-      "No puedes acceder a esa habitación\n",
-      "Estás en la Game Room\n",
+      "Estás en la Bedroom 1\n",
+      "Al examinar encuentras:\n",
+      "['Queen bed', 'Bedside table']\n",
+      "Estás en la Bedroom 1\n",
+      "Acción no válida. Intenta nuevamente.\n",
+      "Estás en la Bedroom 1\n",
+      "Acción no válida. Intenta nuevamente.\n",
+      "Estás en la Bedroom 1\n",
+      "Al examinar encuentras:\n",
+      "['Queen bed', 'Bedside table']\n",
+      "hola\n",
+      "Estás en la Bedroom 1\n",
+      "Al examinar encuentras:\n",
+      "['Queen bed', 'Bedside table']\n",
+      "hola\n",
+      "Estás en la Bedroom 1\n",
       "Acción no válida. Intenta nuevamente.\n"
      ]
     }
@@ -139,6 +189,13 @@
    "source": [
     "juego()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
