--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "room = ['Game Room', 'Bedroom 1', 'Bedroom 2', 'Living Room', 'Outside']\n",
     "gameroom_items = ['Sofa', 'Piano']\n",
     "bedroom1_items = ['Queen bed', 'Bedside table']\n",
-    "bedroom2_items = ['Double bed', 'Dresser']\n",
+    "bedroom2_items = ['Double bed', 'Mirror']\n",
     "livingroom_items = ['Dining table', 'Silla norte', 'Silla sur', 'Silla este', 'Silla oeste']\n",
     "\n",
     "def hab_list():\n",
@@ -20,7 +20,8 @@
     "\n",
     "def puzle_cartas():\n",
     "    carta = str(input(\"Al examinar más de cerca te das cuenta de que solo hay 10 cartas, una por cada valor. ¿Que carta quieres examinar?\"))\n",
-    "    mapa_cartas = { '1': 'Esternocleidomastoideo', 'As' : 'Esternocleidomastoideo', '2' : 'Impromtus','3' : 'Galimatías', '4': 'Anhelar','5': 'Zozobrar','6' : 'Ganzúa','7': 'Hiel','Sota' : 'Pedernal','Caballo' : 'Casquivano', 'Rey' : 'Caos'}\n",
+    "    mapa_cartas = { '1': 'Esternocleidomastoideo', 'As' : 'Esternocleidomastoideo', '2' : 'Impromtus','3' : 'Galimatías', '4': 'Anhelar','5': 'Zozobrar',\n",
+    "                   '6' : 'Ganzúa','7': 'Hiel','Sota' : 'Pedernal','Caballo' : 'Casquivano', 'Rey' : 'Caos'}\n",
     "\n",
     "    mensaje = mapa_cartas[carta]\n",
     "    \n",
@@ -35,13 +36,13 @@
     "    if hab == 'Game Room':\n",
     "        actual_room = room[0]\n",
     "        return actual_room\n",
-    "    elif hab == 'Bedroom 1' and 'Llave A' in key_inv:\n",
+    "    elif hab == 'Bedroom 1':            #  and 'Llave A' in key_inv\n",
     "        actual_room = room[1]\n",
     "        return actual_room\n",
-    "    elif hab == 'Bedroom 2' and 'Llave B' in key_inv:\n",
+    "    elif hab == 'Bedroom 2':            #  and 'Llave B' in key_inv\n",
     "        actual_room = room[2]\n",
     "        return actual_room\n",
-    "    elif hab == 'Living Room' and 'Llave C' in key_inv:\n",
+    "    elif hab == 'Living room' and 'Llave C' in key_inv:\n",
     "        actual_room = room[3]\n",
     "        return actual_room\n",
     "    elif hab == 'Outside' and 'Llave D' in key_inv:\n",
@@ -65,8 +66,7 @@
     "        \n",
     "        if exam_input == 'Sofa':\n",
     "            print(\"Tras examinar detenidamente el sofá encuentras... que no tiene nada de especial.\")\n",
-    "\n",
-    "        if exam_input == 'Piano':\n",
+    "        elif exam_input == 'Piano':\n",
     "            print(\"Tras examinar el piano encuentras una tecla que destaca sobre las demás\")\n",
     "            levantar = input(\"¿Levantas la tecla? (Si/No)\").capitalize()\n",
     "            if levantar == 'Si':\n",
@@ -77,6 +77,7 @@
     "    elif actual_room == 'Bedroom 1':\n",
     "\n",
     "        print(bedroom1_items)\n",
+    "\n",
     "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "\n",
     "        while exam_input not in bedroom1_items:\n",
@@ -89,16 +90,17 @@
     "            if examine_cards == 'Si':\n",
     "                puzle_cartas()\n",
     "\n",
-    "        elif exam_input == 'Queen Bed':\n",
+    "        if exam_input == 'Queen bed':\n",
     "\n",
-    "            choice_bed = input('Encima del colchón ves una caja con un código. ¿Quieres introducir una palabra?').capitalize()\n",
+    "            choice_bed = input('Encima del colchón ves una caja con un código. ¿Quieres introducir una palabra? (Si/No)').capitalize()\n",
     "            if choice_bed == 'Si':\n",
     "                queenbed_code = input('Introduce una palabra').capitalize()\n",
+    "\n",
     "                if queenbed_code == 'Caos':\n",
+    "                    print(\"Has encontrado otra llave. *Llave B obtenida*\")\n",
     "                    key_inv.add('Llave B')\n",
-    "        else:\n",
-    "            print(\"hola\")\n",
-    "            \n",
+    "                else:\n",
+    "                    print(\"No se abre...\")\n",
     "        \n",
     "    elif actual_room == 'Bedroom 2':\n",
     "\n",
@@ -108,6 +110,23 @@
     "        while exam_input not in bedroom2_items:\n",
     "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
     "\n",
+    "        if exam_input == 'Mirror':\n",
+    "            rompe_espejo = input(\"El mueble tiene un espejo. ¿Romper espejo?\")\n",
+    "            if rompe_espejo == 'Si':\n",
+    "                print(\"Enhorabuena!. Has obtenido: *7 años de mala suerte*\")\n",
+    "            else:\n",
+    "                print(\"El espejo te mira con tristeza conforme te alejas ¿o tú le miras a él?\")\n",
+    "\n",
+    "        if exam_input == 'Double bed':\n",
+    "            print(\"Al examinar la cama doble encuentras el siguiente mensaje: \")\n",
+    "            print(\"En esta cama doble el César cifró la contraseña 'gpmlfyai'.\")\n",
+    "            pass_cifr = input('Introduce el mensaje del César').lower()\n",
+    "            if pass_cifr == 'ironhack':\n",
+    "                print(\"Correcto. El mismísimo César estaría orgulloso *Llave C obtenida*\")\n",
+    "                key_inv.add('Llave C')\n",
+    "\n",
+    "        \n",
+    "\n",
     "    elif actual_room == 'Living Room':\n",
     "        \n",
     "        print(livingroom_items)\n",
@@ -115,6 +134,7 @@
     "\n",
     "        while exam_input not in livingroom_items:\n",
     "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
+    "\n",
     "    return key_inv\n",
     "\n",
     "\n",
@@ -145,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -154,11 +174,6 @@
      "text": [
       "Empieza el juego.\n",
       "Estás en la Game Room\n",
-      "Al examinar encuentras:\n",
-      "['Sofa', 'Piano']\n",
-      "Tras examinar el piano encuentras una tecla que destaca sobre las demás\n",
-      "Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\n",
-      "Estás en la Game Room\n",
       "Moviendose...\n",
       "Lista de habitaciones: \n",
       "- Game Room\n",
@@ -166,21 +181,26 @@
       "- Bedroom 2\n",
       "- Living Room\n",
       "- Outside\n",
-      "Estás en la Bedroom 1\n",
+      "Estás en la Bedroom 2\n",
       "Al examinar encuentras:\n",
-      "['Queen bed', 'Bedside table']\n",
-      "Estás en la Bedroom 1\n",
+      "['Double bed', 'Mirror']\n",
+      "Enhorabuena!. Has obtenido: *7 años de mala suerte*\n",
+      "Estás en la Bedroom 2\n",
       "Acción no válida. Intenta nuevamente.\n",
-      "Estás en la Bedroom 1\n",
-      "Acción no válida. Intenta nuevamente.\n",
-      "Estás en la Bedroom 1\n",
+      "Estás en la Bedroom 2\n",
       "Al examinar encuentras:\n",
-      "['Queen bed', 'Bedside table']\n",
-      "hola\n",
-      "Estás en la Bedroom 1\n",
-      "Al examinar encuentras:\n",
-      "['Queen bed', 'Bedside table']\n",
-      "hola\n",
+      "['Double bed', 'Mirror']\n",
+      "Al examinar la cama doble encuentras el siguiente mensaje: \n",
+      "En esta cama doble el César cifró la contraseña 'gpmlfyai'.\n",
+      "Correcto. El mismísimo César estaría orgulloso *Llave C obtenida*\n",
+      "Estás en la Bedroom 2\n",
+      "Moviendose...\n",
+      "Lista de habitaciones: \n",
+      "- Game Room\n",
+      "- Bedroom 1\n",
+      "- Bedroom 2\n",
+      "- Living Room\n",
+      "- Outside\n",
       "Estás en la Bedroom 1\n",
       "Acción no válida. Intenta nuevamente.\n"
      ]
