--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -6,11 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "room = ['Game Room', 'Bedroom 1', 'Bedroom 2', 'Living Room', 'Outside']\n",
     "gameroom_items = ['Sofa', 'Piano']\n",
     "bedroom1_items = ['Queen bed', 'Bedside table']\n",
     "bedroom2_items = ['Double bed', 'Mirror']\n",
-    "livingroom_items = ['Dining table', 'Silla norte', 'Silla sur', 'Silla este', 'Silla oeste', 'Keyboard']\n",
+    "livingroom_items = ['Dining table', 'Keyboard']\n",
     "\n",
     "def hab_list():\n",
     "    print(\"Lista de habitaciones: \")\n",
@@ -125,8 +127,6 @@
     "                print(\"Correcto. El mismísimo César estaría orgulloso *Llave C obtenida*\")\n",
     "                key_inv.add('Llave C')\n",
     "\n",
-    "        \n",
-    "\n",
     "    elif actual_room == 'Living Room':\n",
     "        \n",
     "        print(livingroom_items)\n",
@@ -135,16 +135,7 @@
     "        while exam_input not in livingroom_items:\n",
     "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
     "\n",
-    "        if exam_input == 'Silla norte':\n",
-    "            print(\"Es una silla roja, con respaldo alto compuesto por 8 barrotes delgados, simétricamente dispuestos, y un asiento de madera sólida. \")\n",
-    "        elif exam_input == 'Silla sur':\n",
-    "            print(\"Es una silla verde, con espaldo bajo con 3 barrotes gruesos y espaciados, ideal para un estilo minimalista.\")\n",
-    "        elif exam_input == 'Silla sur':\n",
-    "            print(\"Es una silla azul, con respaldo medio con 6 barrotes finos, equilibrando diseño y soporte. \")\n",
-    "        elif exam_input == 'Silla sur':\n",
-    "            print(\"Es una silla negra, con respaldo sencillo con 4 barrotes anchos, ofreciendo un aspecto rústico y acogedor.\")\n",
-    "        else: \n",
-    "            print(\"La mesa solo tiene las sillas mostradas\")\n",
+    "       \n",
     "        \n",
     "        if exam_input == 'Keyboard':\n",
     "            keyboard_code = input(\"Introduce el código en el teclado\")\n",
