--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "\n",
-    "\n",
-    "room = ['Game Room', 'Bedroom 1', 'Bedroom 2', 'Living Room', 'Outside']\n",
+    "room = ['Game Room', 'Bedroom 1', 'Bedroom 2', 'Living room', 'Outside']\n",
     "gameroom_items = ['Sofa', 'Piano']\n",
     "bedroom1_items = ['Queen bed', 'Bedside table']\n",
     "bedroom2_items = ['Double bed', 'Mirror']\n",
@@ -21,13 +21,25 @@
     "\n",
     "\n",
     "def puzle_cartas():\n",
-    "    carta = str(input(\"Al examinar más de cerca te das cuenta de que solo hay 10 cartas, una por cada valor. ¿Que carta quieres examinar?\"))\n",
+    "    carta = str(input(\"Al examinar más de cerca te das cuenta de que solo hay 10 cartas, una por cada valor. ¿Que carta quieres examinar?\")).capitalize()\n",
     "    mapa_cartas = { '1': 'Esternocleidomastoideo', 'As' : 'Esternocleidomastoideo', '2' : 'Impromtus','3' : 'Galimatías', '4': 'Anhelar','5': 'Zozobrar',\n",
-    "                   '6' : 'Ganzúa','7': 'Hiel','Sota' : 'Pedernal','Caballo' : 'Casquivano', 'Rey' : 'Caos'}\n",
+    "                   '6' : 'Ganzúa','7': 'Hiel','8' : 'Pedernal', 'Sota' : 'Pedernal','9' : 'Casquivano', 'Caballo' : 'Casquivano', '10' : 'Caos', 'Rey' : 'Caos'}\n",
     "\n",
-    "    mensaje = mapa_cartas[carta]\n",
+    "    mensaje = mapa_cartas.get(carta, 'Carta no encontrada')\n",
     "    \n",
     "    print(f\"En el dorso de la carta encuentras escrita la palabra '{mensaje}'\")\n",
+    "\n",
+    "\n",
+    "def extraer_contraseña(patron, texto):\n",
+    "    # Definir el patrón regex basado en las pistas\n",
+    "\n",
+    "    coincidencias = re.findall(patron, texto)\n",
+    "\n",
+    "    # Concatenar todas las secuencias de dígitos encontradas\n",
+    "    resultado = ''.join(coincidencias)\n",
+    "\n",
+    "    # Mostrar el resultado\n",
+    "    return resultado\n",
     "\n",
     "\n",
     "def moverse(actual_room, key_inv):\n",
@@ -44,7 +56,7 @@
     "    elif hab == 'Bedroom 2':            #  and 'Llave B' in key_inv\n",
     "        actual_room = room[2]\n",
     "        return actual_room\n",
-    "    elif hab == 'Living room' and 'Llave C' in key_inv:\n",
+    "    elif hab == 'Living room' :         # and 'Llave C' in key_inv\n",
     "        actual_room = room[3]\n",
     "        return actual_room\n",
     "    elif hab == 'Outside' and 'Llave D' in key_inv:\n",
@@ -127,19 +139,39 @@
     "                print(\"Correcto. El mismísimo César estaría orgulloso *Llave C obtenida*\")\n",
     "                key_inv.add('Llave C')\n",
     "\n",
-    "    elif actual_room == 'Living Room':\n",
+    "    elif actual_room == 'Living room':\n",
     "        \n",
     "        print(livingroom_items)\n",
     "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
     "\n",
     "        while exam_input not in livingroom_items:\n",
     "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
-    "\n",
-    "       \n",
     "        \n",
+    "        if exam_input == 'Dining table':\n",
+    "            print(\"Encima de la mesa encuentras una tablet con un mensaje:\")\n",
+    "            print(\"Para abrir la última puerta deberás de introducir un código. El código está oculto en un mensaje el cual deberás descifrar utilizando regex.\")\n",
+    "            choice_dining = input(\"¿Que quieres hacer leer el mensaje o intentar introducir el patrón? (Leer/Resolver)\").capitalize()\n",
+    "\n",
+    "            texto_pista = \"ewf@adewq20wefewfewfewf'lkjashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfklj24ashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkl\"\n",
+    "\n",
+    "            if choice_dining == 'Leer':\n",
+    "                print(f\"El mensaje dice lo siguiente:\\n{texto_pista}\")\n",
+    "                choice_dining = input(\"¿Quieres tratar de resolverlo? (Resolver/No)\").capitalize()\n",
+    "\n",
+    "            if choice_dining == 'Resolver':\n",
+    "                user_regex = str(input(\"Introduce el patrón regex\"))\n",
+    "\n",
+    "                if user_regex == \"r'\\d+'\":\n",
+    "                    result_regex = extraer_contraseña(r'\\d+', texto_pista)\n",
+    "                    print(f\"Tú resultado obtenido es {result_regex}\")\n",
+    "                else:\n",
+    "                    print(f\"Tú resultado obtenido es incorrecto\")\n",
+    "            \n",
+    "\n",
     "        if exam_input == 'Keyboard':\n",
     "            keyboard_code = input(\"Introduce el código en el teclado\")\n",
-    "            ## if keyboard_code == \n",
+    "            if keyboard_code == 2024:\n",
+    "                \n",
     "\n",
     "    return key_inv\n",
     "\n",
@@ -171,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -185,29 +217,15 @@
       "- Game Room\n",
       "- Bedroom 1\n",
       "- Bedroom 2\n",
-      "- Living Room\n",
+      "- Living room\n",
       "- Outside\n",
-      "Estás en la Bedroom 2\n",
+      "Estás en la Living room\n",
       "Al examinar encuentras:\n",
-      "['Double bed', 'Mirror']\n",
-      "Enhorabuena!. Has obtenido: *7 años de mala suerte*\n",
-      "Estás en la Bedroom 2\n",
-      "Acción no válida. Intenta nuevamente.\n",
-      "Estás en la Bedroom 2\n",
-      "Al examinar encuentras:\n",
-      "['Double bed', 'Mirror']\n",
-      "Al examinar la cama doble encuentras el siguiente mensaje: \n",
-      "En esta cama doble el César cifró la contraseña 'gpmlfyai'.\n",
-      "Correcto. El mismísimo César estaría orgulloso *Llave C obtenida*\n",
-      "Estás en la Bedroom 2\n",
-      "Moviendose...\n",
-      "Lista de habitaciones: \n",
-      "- Game Room\n",
-      "- Bedroom 1\n",
-      "- Bedroom 2\n",
-      "- Living Room\n",
-      "- Outside\n",
-      "Estás en la Bedroom 1\n",
+      "['Dining table', 'Keyboard']\n",
+      "Encima de la mesa encuentras una tablet con un mensaje:\n",
+      "Para abrir la última puerta deberás de introducir un código. El código está oculto en un mensaje el cual deberás descifrar utilizando regex.\n",
+      "Tú resultado obtenido es 2024\n",
+      "Estás en la Living room\n",
       "Acción no válida. Intenta nuevamente.\n"
      ]
     }
