--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,208 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
-    "room = ['Game Room', 'Bedroom 1', 'Bedroom 2', 'Living room', 'Outside']\n",
-    "gameroom_items = ['Sofa', 'Piano']\n",
-    "bedroom1_items = ['Queen bed', 'Bedside table']\n",
-    "bedroom2_items = ['Double bed', 'Mirror']\n",
-    "livingroom_items = ['Dining table', 'Keyboard']\n",
-    "\n",
-    "def hab_list():\n",
-    "    print(\"Lista de habitaciones: \")\n",
-    "    for x in room:\n",
-    "        print(f\"- {x}\")\n",
-    "\n",
-    "\n",
-    "def puzle_cartas():\n",
-    "    carta = str(input(\"Al examinar más de cerca te das cuenta de que solo hay 10 cartas, una por cada valor. ¿Que carta quieres examinar?\")).capitalize()\n",
-    "    mapa_cartas = { '1': 'Esternocleidomastoideo', 'As' : 'Esternocleidomastoideo', '2' : 'Impromtus','3' : 'Galimatías', '4': 'Anhelar','5': 'Zozobrar',\n",
-    "                   '6' : 'Ganzúa','7': 'Hiel','8' : 'Pedernal', 'Sota' : 'Pedernal','9' : 'Casquivano', 'Caballo' : 'Casquivano', '10' : 'Caos', 'Rey' : 'Caos'}\n",
-    "\n",
-    "    mensaje = mapa_cartas.get(carta, 'Carta no encontrada')\n",
-    "    \n",
-    "    print(f\"En el dorso de la carta encuentras escrita la palabra '{mensaje}'\")\n",
-    "\n",
-    "\n",
-    "def extraer_contraseña(patron, texto):\n",
-    "    # Definir el patrón regex basado en las pistas\n",
-    "\n",
-    "    coincidencias = re.findall(patron, texto)\n",
-    "\n",
-    "    # Concatenar todas las secuencias de dígitos encontradas\n",
-    "    resultado = ''.join(coincidencias)\n",
-    "\n",
-    "    # Mostrar el resultado\n",
-    "    return resultado\n",
-    "\n",
-    "\n",
-    "def moverse(actual_room, key_inv):\n",
-    "    hab_list()\n",
-    "    hab = input(\"¿A que habitación quiere ir?\").capitalize()\n",
-    "    while hab not in room:\n",
-    "        hab = input(\"Elija una habitación existente\")\n",
-    "    if hab == 'Game Room':\n",
-    "        actual_room = room[0]\n",
-    "        return actual_room\n",
-    "    elif hab == 'Bedroom 1':            #  and 'Llave A' in key_inv\n",
-    "        actual_room = room[1]\n",
-    "        return actual_room\n",
-    "    elif hab == 'Bedroom 2':            #  and 'Llave B' in key_inv\n",
-    "        actual_room = room[2]\n",
-    "        return actual_room\n",
-    "    elif hab == 'Living room' :         # and 'Llave C' in key_inv\n",
-    "        actual_room = room[3]\n",
-    "        return actual_room\n",
-    "    elif hab == 'Outside' and 'Llave D' in key_inv:\n",
-    "        actual_room = room[4]\n",
-    "        return actual_room\n",
-    "    else: \n",
-    "        print(f\"No puedes acceder a la {hab}\")\n",
-    "        return actual_room\n",
-    "\n",
-    "\n",
-    "\n",
-    "def examinar(actual_room, key_inv):\n",
-    "\n",
-    "    if actual_room == 'Game Room':\n",
-    "\n",
-    "        print(gameroom_items)\n",
-    "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
-    "        \n",
-    "        while exam_input not in gameroom_items:\n",
-    "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
-    "        \n",
-    "        if exam_input == 'Sofa':\n",
-    "            print(\"Tras examinar detenidamente el sofá encuentras... que no tiene nada de especial.\")\n",
-    "        elif exam_input == 'Piano':\n",
-    "            print(\"Tras examinar el piano encuentras una tecla que destaca sobre las demás\")\n",
-    "            levantar = input(\"¿Levantas la tecla? (Si/No)\").capitalize()\n",
-    "            if levantar == 'Si':\n",
-    "                print(\"Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\")\n",
-    "                key_inv.add('Llave A')\n",
-    "                \n",
-    "            \n",
-    "    elif actual_room == 'Bedroom 1':\n",
-    "\n",
-    "        print(bedroom1_items)\n",
-    "\n",
-    "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
-    "\n",
-    "        while exam_input not in bedroom1_items:\n",
-    "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
-    "\n",
-    "\n",
-    "        if exam_input == 'Bedside table':\n",
-    "\n",
-    "            examine_cards = input(\"Encuentras una baraja de cartas. ¿Examinar? (Si/No)\").capitalize()\n",
-    "            if examine_cards == 'Si':\n",
-    "                puzle_cartas()\n",
-    "\n",
-    "        if exam_input == 'Queen bed':\n",
-    "\n",
-    "            choice_bed = input('Encima del colchón ves una caja con un código. ¿Quieres introducir una palabra? (Si/No)').capitalize()\n",
-    "            if choice_bed == 'Si':\n",
-    "                queenbed_code = input('Introduce una palabra').capitalize()\n",
-    "\n",
-    "                if queenbed_code == 'Caos':\n",
-    "                    print(\"Has encontrado otra llave. *Llave B obtenida*\")\n",
-    "                    key_inv.add('Llave B')\n",
-    "                else:\n",
-    "                    print(\"No se abre...\")\n",
-    "        \n",
-    "    elif actual_room == 'Bedroom 2':\n",
-    "\n",
-    "        print(bedroom2_items)\n",
-    "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
-    "\n",
-    "        while exam_input not in bedroom2_items:\n",
-    "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
-    "\n",
-    "        if exam_input == 'Mirror':\n",
-    "            rompe_espejo = input(\"El mueble tiene un espejo. ¿Romper espejo?\")\n",
-    "            if rompe_espejo == 'Si':\n",
-    "                print(\"Enhorabuena!. Has obtenido: *7 años de mala suerte*\")\n",
-    "            else:\n",
-    "                print(\"El espejo te mira con tristeza conforme te alejas ¿o tú le miras a él?\")\n",
-    "\n",
-    "        if exam_input == 'Double bed':\n",
-    "            print(\"Al examinar la cama doble encuentras el siguiente mensaje: \")\n",
-    "            print(\"En esta cama doble el César cifró la contraseña 'gpmlfyai'.\")\n",
-    "            pass_cifr = input('Introduce el mensaje del César').lower()\n",
-    "            if pass_cifr == 'ironhack':\n",
-    "                print(\"Correcto. El mismísimo César estaría orgulloso *Llave C obtenida*\")\n",
-    "                key_inv.add('Llave C')\n",
-    "\n",
-    "    elif actual_room == 'Living room':\n",
-    "        \n",
-    "        print(livingroom_items)\n",
-    "        exam_input = input(\"¿Que quieres examinar?\").capitalize()\n",
-    "\n",
-    "        while exam_input not in livingroom_items:\n",
-    "            exam_input = input(\"Elija uno de los objetos disponibles.\").capitalize()\n",
-    "        \n",
-    "        if exam_input == 'Dining table':\n",
-    "            print(\"Encima de la mesa encuentras una tablet con un mensaje:\")\n",
-    "            print(\"Para abrir la última puerta deberás de introducir un código. El código está oculto en un mensaje el cual deberás descifrar utilizando regex.\")\n",
-    "            choice_dining = input(\"¿Que quieres hacer leer el mensaje o intentar introducir el patrón? (Leer/Resolver)\").capitalize()\n",
-    "\n",
-    "            texto_pista = \"ewf@adewq20wefewfewfewf'lkjashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfklj24ashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkljahsdfkljashdfkl\"\n",
-    "\n",
-    "            if choice_dining == 'Leer':\n",
-    "                print(f\"El mensaje dice lo siguiente:\\n{texto_pista}\")\n",
-    "                choice_dining = input(\"¿Quieres tratar de resolverlo? (Resolver/No)\").capitalize()\n",
-    "\n",
-    "            if choice_dining == 'Resolver':\n",
-    "                user_regex = str(input(\"Introduce el patrón regex\"))\n",
-    "\n",
-    "                if user_regex == \"r'\\d+'\":\n",
-    "                    result_regex = extraer_contraseña(r'\\d+', texto_pista)\n",
-    "                    print(f\"Tú resultado obtenido es {result_regex}\")\n",
-    "                else:\n",
-    "                    print(f\"Tú resultado obtenido es incorrecto\")\n",
-    "            \n",
-    "\n",
-    "        if exam_input == 'Keyboard':\n",
-    "            keyboard_code = input(\"Introduce el código en el teclado\")\n",
-    "            if keyboard_code == 2024:\n",
-    "                \n",
-    "\n",
-    "    return key_inv\n",
-    "\n",
-    "\n",
-    "\n",
-    "def juego():\n",
-    "\n",
-    "    key_inv = set()\n",
-    "    actual_room = room[0]\n",
-    "    print(\"Empieza el juego.\")\n",
-    "    accion='d'      # luego borra esto y el sal de abajo\n",
-    "    \n",
-    "    while not actual_room == room[4] and accion!='sal':\n",
-    "\n",
-    "        print(f\"Estás en la {actual_room}\")\n",
-    "        accion = input(\"¿Qué quieres hacer? (moverse/examinar): \").lower()\n",
-    "        if accion == \"moverse\":\n",
-    "            print(\"Moviendose...\")\n",
-    "            actual_room = moverse(actual_room, key_inv)\n",
-    "\n",
-    "        elif accion == \"examinar\":\n",
-    "\n",
-    "            print(\"Al examinar encuentras:\")\n",
-    "            \n",
-    "            key_inv = examinar(actual_room, key_inv)\n",
-    "        else:\n",
-    "            print(\"Acción no válida. Intenta nuevamente.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,27 +18,17 @@
       "- Bedroom 2\n",
       "- Living room\n",
       "- Outside\n",
-      "Estás en la Living room\n",
-      "Al examinar encuentras:\n",
-      "['Dining table', 'Keyboard']\n",
-      "Encima de la mesa encuentras una tablet con un mensaje:\n",
-      "Para abrir la última puerta deberás de introducir un código. El código está oculto en un mensaje el cual deberás descifrar utilizando regex.\n",
-      "Tú resultado obtenido es 2024\n",
-      "Estás en la Living room\n",
+      "No puedes acceder a la Bedroom 1\n",
+      "Estás en la Game Room\n",
       "Acción no válida. Intenta nuevamente.\n"
      ]
     }
    ],
    "source": [
+    "from funciones import *\n",
+    "\n",
     "juego()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
