--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empieza el juego.\n",
+      "Te despiertas en una habitación extraña.\n",
       "Estás en la Game Room\n",
       "Moviendose...\n",
       "Lista de habitaciones: \n",
@@ -17,10 +17,7 @@
       "- Bedroom 1\n",
       "- Bedroom 2\n",
       "- Living room\n",
-      "- Outside\n",
-      "No puedes acceder a la Bedroom 1\n",
-      "Estás en la Game Room\n",
-      "Acción no válida. Intenta nuevamente.\n"
+      "- Outside\n"
      ]
     }
    ],
@@ -29,6 +26,13 @@
     "\n",
     "juego()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
