--- a/ProyectoEscapeRoom.ipynb
+++ b/ProyectoEscapeRoom.ipynb
@@ -10,10 +10,95 @@
      "output_type": "stream",
      "text": [
       "Te despiertas en una habitación extraña.\n",
-      "Estás en la Game Room\n",
+      "Estás en la Game room\n",
       "Moviendose...\n",
       "Lista de habitaciones: \n",
-      "- Game Room\n",
+      "- Game room\n",
+      "- Bedroom 1\n",
+      "- Bedroom 2\n",
+      "- Living room\n",
+      "- Outside\n",
+      "Estás en la Game room\n",
+      "Acción no válida. Intenta nuevamente.\n",
+      "Estás en la Game room\n",
+      "Al examinar encuentras:\n",
+      "['Sofa', 'Piano']\n",
+      "Tras examinar el piano encuentras una tecla que destaca sobre las demás\n",
+      "Tras levantar la tecla no encuentras nada debajo, como es lógico, pero al mirar de frente ves una llave. *Llave A obtenida*\n",
+      "Estás en la Game room\n",
+      "Moviendose...\n",
+      "Lista de habitaciones: \n",
+      "- Game room\n",
+      "- Bedroom 1\n",
+      "- Bedroom 2\n",
+      "- Living room\n",
+      "- Outside\n",
+      "Estás en la Bedroom 1\n",
+      "Al examinar encuentras:\n",
+      "['Queen bed', 'Bedside table']\n",
+      "Has encontrado otra llave. *Llave B obtenida*\n",
+      "Estás en la Bedroom 1\n",
+      "Moviendose...\n",
+      "Lista de habitaciones: \n",
+      "- Game room\n",
+      "- Bedroom 1\n",
+      "- Bedroom 2\n",
+      "- Living room\n",
+      "- Outside\n",
+      "Estás en la Bedroom 2\n",
+      "Al examinar encuentras:\n",
+      "['Double bed', 'Mirror']\n",
+      "Al examinar la cama doble encuentras el siguiente mensaje: \n",
+      "En esta cama doble el César cifró la contraseña 'gpmlfyai'.\n",
+      "Correcto. El mismísimo César estaría orgulloso. *Llave C obtenida*\n",
+      "Estás en la Bedroom 2\n",
+      "Moviendose...\n",
+      "Lista de habitaciones: \n",
+      "- Game room\n",
+      "- Bedroom 1\n",
+      "- Bedroom 2\n",
+      "- Living room\n",
+      "- Outside\n",
+      "Estás en la Living room\n",
+      "Al examinar encuentras:\n",
+      "['Dining table', 'Keyboard']\n",
+      "Encima de la mesa encuentras una tablet con un mensaje:\n",
+      "Para abrir la última puerta deberás de introducir un código. El código está oculto en un mensaje el cual deberás descifrar utilizando regex.\n",
+      "Tú resultado obtenido es incorrecto\n",
+      "Estás en la Living room\n",
+      "Acción no válida. Intenta nuevamente.\n",
+      "Estás en la Living room\n",
+      "Al examinar encuentras:\n",
+      "['Dining table', 'Keyboard']\n",
+      "Encima de la mesa encuentras una tablet con un mensaje:\n",
+      "Para abrir la última puerta deberás de introducir un código. El código está oculto en un mensaje el cual deberás descifrar utilizando regex.\n",
+      "Estás en la Living room\n",
+      "Acción no válida. Intenta nuevamente.\n",
+      "Estás en la Living room\n",
+      "Moviendose...\n",
+      "Lista de habitaciones: \n",
+      "- Game room\n",
+      "- Bedroom 1\n",
+      "- Bedroom 2\n",
+      "- Living room\n",
+      "- Outside\n",
+      "No puedes acceder a la Outside\n",
+      "Estás en la Living room\n",
+      "Al examinar encuentras:\n",
+      "['Dining table', 'Keyboard']\n",
+      "Encima de la mesa encuentras una tablet con un mensaje:\n",
+      "Para abrir la última puerta deberás de introducir un código. El código está oculto en un mensaje el cual deberás descifrar utilizando regex.\n",
+      "Tú resultado obtenido es 2024\n",
+      "Estás en la Living room\n",
+      "Al examinar encuentras:\n",
+      "['Dining table', 'Keyboard']\n",
+      "Correcto. Ya casi estás fuera! *Llave D obtenida*\n",
+      "Estás en la Living room\n",
+      "Acción no válida. Intenta nuevamente.\n",
+      "Estás en la Living room\n",
+      "Moviendose...\n",
+      "Lista de habitaciones: \n",
+      "- Game room\n",
       "- Bedroom 1\n",
       "- Bedroom 2\n",
       "- Living room\n",
